# PL0-compiler

./: README.md
pl0/: CMakeLists.txt  PL0  PL0.h  example.txt  hbin.txt  pl0.c  pl00  plcc  test  testh
pl0/Debug/: example.txt  plcc
pl0/pl0.out.dSYM/Contents/: Info.plist
pl0/pl0.out.dSYM/Contents/Resources/DWARF/: pl0.out
pl0/pl00.dSYM/Contents/: Info.plist
pl0/pl00.dSYM/Contents/Resources/DWARF/: pl00
pl0/testh.dSYM/Contents/: Info.plist
pl0/testh.dSYM/Contents/Resources/DWARF/: testh
